--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --watchAll",
-    "start": "nodemon dev-test.js"
+    "dev-test": "nodemon dev-test.js",
+    "start": "node ./app",
+    "dev": "nodemon ./app"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "crypto-js": "^4.1.1",
+    "express": "^4.17.1",
     "nodemon": "^2.0.15"
   },
   "devDependencies": {
