--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "crypto-js": "^4.1.1",
     "express": "^4.17.1",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "ws": "^8.3.0"
   },
   "devDependencies": {
     "jest": "^27.3.1"
