--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "license": "ISC",
   "dependencies": {
     "crypto-js": "^4.1.1",
+    "elliptic": "^6.5.4",
     "express": "^4.17.1",
     "nodemon": "^2.0.15",
+    "uuid": "^8.3.2",
     "ws": "^8.3.0"
   },
   "devDependencies": {
